# gsm-fleet-dispatch-ai

./: .gitignore  docker-compose.yml  report.md  requirements-ml.txt  requirements-simulator.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/fleet_dispatch/: __init__.py  config.py  logging.py  main.py  metrics.py  middleware.py  telemetry.py
backend/src/fleet_dispatch/api/: router.py
backend/src/fleet_dispatch/api/routes/: geocoding.py  health.py  routing.py
backend/src/fleet_dispatch/clients/: geocoding.py  routes.py
backend/tests/: test_config.py  test_geocoding.py  test_health.py  test_routing.py
data/: charging_stations.json  generate_charging_stations.py  generate_hanoi_zones.py  hanoi_zones.json  simulation_config.json
docs/: PROJECT_PLAN.md  business_design.md  repositioning_mcf_vs_greedy.md  week2_data_sanity_check.md  (+4 more)
ml/: .env.example  README.md  ab_testing.py  acceptance_model.py  common.py  cost_model.py  export_demo_data.py  forecast_model.py  geocoding_client.py  matching_engine.py  matching_flow.py  mlflow_tracking.py  nlg_explainer.py  pyproject.toml  repositioning_mcf.py  repositioning_suggester.py  routing_client.py  train_all.py  train_week4.py
ml/artifacts/: acceptance_metrics.json  acceptance_model.joblib  cost_model.joblib  cost_model_metrics.json  forecast_metrics.json  forecast_model.joblib  greedy_suggestions.csv  herding_comparison.csv  matching_engine_summary.json  matching_flow_summary.json  matching_hungarian_demo.csv  matching_pooling_demo.csv  mcf_distance_suggestions.csv  mcf_hybrid_suggestions.csv  mcf_suggestions.csv  repositioning_comparison.json  repositioning_suggester_summary.json  week3_run_summary.json  week4_run_summary.json
ml/tests/: test_export_demo_data.py  test_geocoding_client.py  test_matching_flow.py  test_mlflow_tracking.py  test_nlg_explainer.py  test_routing_client.py
(+756 files in other folders)
