[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "holidays==0.100",
    "joblib==1.4.2",
    "matplotlib==3.10.9",
    "mlflow>=3.14.0",
    "numpy==1.26.4",
    "ortools==9.14.6206",
    "pandas==2.2.2",
    "pyarrow==17.0.0",
    "requests==2.32.3",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
]
